; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_act_api.c_tcf_hash_new_index.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_act_api.c_tcf_hash_new_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcf_hashinfo = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @tcf_hash_new_index(i64* %0, %struct.tcf_hashinfo* %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca %struct.tcf_hashinfo*, align 8
  %5 = alloca i64, align 8
  store i64* %0, i64** %3, align 8
  store %struct.tcf_hashinfo* %1, %struct.tcf_hashinfo** %4, align 8
  %6 = load i64*, i64** %3, align 8
  %7 = load i64, i64* %6, align 8
  store i64 %7, i64* %5, align 8
  br label %8

8:                                                ; preds = %14, %2
  %9 = load i64, i64* %5, align 8
  %10 = add nsw i64 %9, 1
  store i64 %10, i64* %5, align 8
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %8
  store i64 1, i64* %5, align 8
  br label %13

13:                                               ; preds = %12, %8
  br label %14

14:                                               ; preds = %13
  %15 = load i64, i64* %5, align 8
  %16 = load %struct.tcf_hashinfo*, %struct.tcf_hashinfo** %4, align 8
  %17 = call i64 @tcf_hash_lookup(i64 %15, %struct.tcf_hashinfo* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %8, label %19

19:                                               ; preds = %14
  %20 = load i64, i64* %5, align 8
  %21 = load i64*, i64** %3, align 8
  store i64 %20, i64* %21, align 8
  ret i64 %20
}

declare dso_local i64 @tcf_hash_lookup(i64, %struct.tcf_hashinfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
